--- a/mynlp/pom.xml
+++ b/mynlp/pom.xml
@@ -15,11 +15,11 @@
             <artifactId>easyexcel</artifactId>
             <version>2.0.5</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13-beta-3</version>
-            <scope>compile</scope>
+            <version>4.12</version>
         </dependency>
 
     </dependencies>
